--- a/firmaelectronica.html
+++ b/firmaelectronica.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>Firma Digital de Valentina Gadagñotto</title>
+        <title>Firma Electrónica de Valentina Gadagñotto</title>
         <link rel="stylesheet" href="./css/estilos.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
